# comfyui-prompt-manager

./: README.md  __init__.py  pyproject.toml
.trae/documents/: Feature Proposal for ComfyUI Prompt Manager.md  Update Category Count Text Color.md
js/: prompt_collector.js  prompt_node.js
storage/: 二次元.json  人物 (Characters).json  未分类.json  风格 (Styles).json
