[project]
name = "comfyui-prompt-manager"
description = "A modern, powerful, and easy-to-use Prompt Manager extension for ComfyUI."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/colorAi/comfyui-prompt-manager"

[tool.comfy]
PublisherId = "hootoo"
DisplayName = "ComfyUI Prompt Manager"
Icon = ""
